Навбар, скрытие текста не помещающегося в одну строку

--- a/RealtimeDataPortal/ClientApp/src/components/navbar/navbar.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/navbar/navbar.sass
@@ -55,6 +55,7 @@
             border-radius: 5px
             text-decoration: none
             word-break: break-word
+            white-space: nowrap
             color: #e2e8ee
             cursor: pointer
             span
