--- a/RealtimeDataPortal/ClientApp/src/components/navbar/menuItems/menuItem/folder/folder.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/navbar/menuItems/menuItem/folder/folder.sass
@@ -10,5 +10,7 @@
         &:hover
             color: #fff
             background: rgba(255, 255, 255, .4)
+        div:first-child
+            flex-grow: 1
         p
             flex-grow: 1
