Мнемосхема. Изменение структуры таблицы 'Мнемосхема'. Удален столбец 'Id'

--- a/RealtimeDataPortal/ClientApp/src/components/navbar/menuItems/menuItem/page/page.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/navbar/menuItems/menuItem/page/page.sass
@@ -8,6 +8,8 @@ ul
     &:hover
         color: #fff
         background: rgba(255, 255, 255, .4)
+    div:first-child
+        flex-grow: 1
     a
         display: block
         flex-grow: 1
