--- a/RealtimeDataPortal/ClientApp/src/style/_fonts.sass
+++ b/RealtimeDataPortal/ClientApp/src/style/_fonts.sass
@@ -1,35 +1,35 @@
 @font-face
-    font-family: "Roboto"
-    src: url(../fonts/Roboto-Thin.woff)
+    font-family: "Inter"
+    src: url(../fonts/Inter-Thin.ttf)
     font-weight: 100
     font-style: normal
 
 @font-face
-    font-family: "Roboto"
-    src: url(../fonts/Roboto-Light.woff)
+    font-family: "Inter"
+    src: url(../fonts/Inter-Light.ttf)
     font-weight: 300
     font-style: normal
 
 @font-face
-    font-family: "Roboto"
-    src: url(../fonts/Roboto-Regular.woff)
+    font-family: "Inter"
+    src: url(../fonts/Inter-Regular.ttf)
     font-weight: 400
     font-style: normal
 
 @font-face
-    font-family: "Roboto"
-    src: url(../fonts/Roboto-Medium.woff)
+    font-family: "Inter"
+    src: url(../fonts/Inter-Medium.ttf)
     font-weight: 500
     font-style: normal
 
 @font-face
-    font-family: "Roboto"
-    src: url(../fonts/Roboto-Bold.woff)
+    font-family: "Inter"
+    src: url(../fonts/Inter-Bold.ttf)
     font-weight: 700
     font-style: normal
 
 @font-face
-    font-family: "Roboto"
-    src: url(../fonts/Roboto-Black.woff)
+    font-family: "Inter"
+    src: url(../fonts/Inter-Black.ttf)
     font-weight: 900
     font-style: normal
