--- a/RealtimeDataPortal/ClientApp/src/components/navbar/navbar.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/navbar/navbar.sass
@@ -28,6 +28,7 @@
         margin-top: 1rem
         max-height: 100%
         padding: 0 5px 0 8px
+        font-size: .95em
         overflow: scroll
         overflow-x: hidden
         @include scrollbar
