Перевод хранения данных пользователя в сессии. Смена списка ошибок

--- a/RealtimeDataPortal/ClientApp/src/components/navbar/menuItems/menuItem/page/page.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/navbar/menuItems/menuItem/page/page.sass
@@ -5,6 +5,8 @@ ul
     align-items: center
     border-radius: 5px
     margin: 5px 0
+    span
+        font-weight: 300
     &:hover
         color: #fff
         background: rgba(255, 255, 255, .4)
