--- a/RealtimeDataPortal/ClientApp/src/components/navbar/menuItems/menuItem/folder/folder.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/navbar/menuItems/menuItem/folder/folder.sass
@@ -7,6 +7,9 @@
         margin: 5px 0
         align-items: center
         border-radius: 5px
+        span
+            font-weight: 500
+            color: #e1e1e1
         &:hover
             color: #fff
             background: rgba(255, 255, 255, .4)
