--- a/RealtimeDataPortal/ClientApp/src/components/tables/table.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/tables/table.sass
@@ -41,9 +41,9 @@
         td
             min-width: 4rem
             padding: .5rem .7rem
-            border-bottom: 1px solid #dbdbdb
+            border-bottom: 1px solid $table-border-color
             text-align: center
-            color: #373A40
+            color: $table-text-color
 .mantine-Popover-inner
     padding: 0rem
 .mantine-ptywf3.mantine-Popover-body
