--- a/RealtimeDataPortal/ClientApp/src/style/_variables.sass
+++ b/RealtimeDataPortal/ClientApp/src/style/_variables.sass
@@ -2,3 +2,5 @@ $main-color: #2d6bcf
 $second-color: #84aef2
 $menu-color: #50575c
 $navbar-width: 325px
+$table-border-color: #dbdbdb
+$table-text-color: #373A40
