Изменение выпадающего списка для всех компонентов

--- a/RealtimeDataPortal/ClientApp/src/components/administrator/administrator.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/administrator/administrator.sass
@@ -7,4 +7,6 @@
     .info-block
         margin: 0 auto
         padding: 1rem 2rem
+        form
+            @include dropdown($width: calc(100% - 55px))
     @include add-change-form
