--- a/RealtimeDataPortal/ClientApp/src/components/configurator/forms/table-rt/tableRt.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/configurator/forms/table-rt/tableRt.sass
@@ -8,5 +8,7 @@
             fieldset
                 padding-left: 2rem
             &__product-block
+                @include dropdown($width: calc(100% - 40px))
+                
                 @include fieldset-block
                     
