--- a/RealtimeDataPortal/ClientApp/src/components/configurator/configurator.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/configurator/configurator.sass
@@ -7,7 +7,8 @@
         display: none
     &__form
         position: relative
-        @include search-result(calc(100% - 55px))
+        @include dropdown($width: calc(100% - 55px))
+        
         &__list-elements-to-remove
             margin: 0
             padding: 1em
