--- a/RealtimeDataPortal/ClientApp/src/components/configurator/forms/custom-table/customtable.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/configurator/forms/custom-table/customtable.sass
@@ -61,16 +61,24 @@
                 top: 0
                 left: -2rem
         &__table-settings
+            display: flex
+            justify-content: flex-start
+            align-items: center
             max-height: 0px
             margin: 2rem 0
             padding: 0 2rem
             transition: all .5s ease-out
             &__cellContain
+                width: 100%
                 max-width: 330px
                 position: relative
                 @include dropdown(100%)
                 .mantine-Popover-root
                     width: 100%
+            &__font-weight
+                margin-left: .5em
+            &__contain-alignment
+                margin-left: .5em
                 
 
 
