Custom Table. Возможность создания ссылки

--- a/RealtimeDataPortal/ClientApp/src/components/custom-table/customTable.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/custom-table/customTable.sass
@@ -2,9 +2,10 @@
 
 .custom-table
     &__header
-        display: flex
-        justify-content: space-between
-        align-items: center
+        & > div:first-child
+            display: flex
+            justify-content: space-between
+            align-items: center
     &__table
         &.info-block
             padding: 2rem
