--- a/RealtimeDataPortal/ClientApp/src/components/configurator/forms/custom-table/customtable.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/configurator/forms/custom-table/customtable.sass
@@ -23,7 +23,7 @@
                 flex-grow: .25
                 padding: 2rem 1rem 0
         &__table
-            padding: 2rem
+            padding: 0 2rem
             overflow: auto
             @include scrollbar
             table
@@ -36,6 +36,7 @@
                         border: 1px solid $table-border-color
                         color: $table-text-color
                         text-align: center
+                        vertical-align: middle
                         empty-cells: hide
                         cursor: pointer
                         transition: all .3s ease
@@ -64,35 +65,56 @@
             display: flex
             justify-content: flex-start
             align-items: center
+            flex-wrap: wrap
             max-height: 0px
-            margin: 2rem 0
-            padding: 0 2rem
+            margin: 1.5rem 0
+            padding: 0 1rem
             transition: all .5s ease-out
             &__cellContain
                 width: 100%
-                max-width: 330px
+                max-width: 250px
                 position: relative
+                margin: .3em
                 @include dropdown(100%)
                 .mantine-Popover-root
                     width: 100%
+            &__set-link
+                display: flex
+                justify-content: center
+                align-items: center
+                flex-wrap: nowrap
+                max-width: 250px
+                margin: .3em
+                &__link[open]
+                    width: 250px
+                    transition: width .3s ease
+                &__link
+                    width: 0 
+                    margin-left: .3em
+                    overflow: hidden
+                    transition: width .3s ease
             &__font-weight
-                margin-left: .5em
+                margin: .3em
             &__contain-alignment
-                margin-left: .5em
+                display: flex
+                flex-wrap: nowrap
+                margin: .3em
             &__vertical-alignment
-                margin-left: .5em
+                display: flex
+                flex-wrap: nowrap
+                margin: .3em
             &__colspan
-                margin-left: .5em
-                max-width: 80px
+                margin: .3em
+                width: 80px
             &__rowspan
-                margin-left: .5em
-                max-width: 80px
+                margin: .3em
+                width: 80px
             &__color
-                margin-left: .5em
-                max-width: 100px
+                margin: .3em
+                width: 100px
             &__background
-                margin-left: .5em
-                max-width: 100px
+                margin: .3em
+                width: 100px
                 
 
 
