--- a/RealtimeDataPortal/ClientApp/src/index.sass
+++ b/RealtimeDataPortal/ClientApp/src/index.sass
@@ -66,7 +66,8 @@ ul
         justify-content: space-between
         align-items: center
         border-radius: 5px
-        padding: .5rem 1rem
+        padding: .2rem .5rem
+        font-size: 13px
         span
             flex-grow: 1
         &:hover
