Custom-table. Добавлены формулы

--- a/RealtimeDataPortal/ClientApp/src/components/custom-table/customTable.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/custom-table/customTable.sass
@@ -15,9 +15,11 @@
             align-items: center
         table
             width: 100%
+            word-break: break-all
             tr
                 td
                     min-width: 50px
+                    height: 2rem
                     padding: .2rem .5rem
                     border: 1px solid $table-border-color
                     color: $table-text-color
