--- a/RealtimeDataPortal/ClientApp/src/components/configurator/forms/custom-table/customtable.sass
+++ b/RealtimeDataPortal/ClientApp/src/components/configurator/forms/custom-table/customtable.sass
@@ -28,10 +28,12 @@
             @include scrollbar
             table
                 width: 100%
+                word-break: break-all
                 tr
                     td
                         position: relative
                         min-width: 50px
+                        height: 2rem
                         padding: .2rem .5rem
                         border: 1px solid $table-border-color
                         color: $table-text-color
@@ -40,6 +42,10 @@
                         empty-cells: hide
                         cursor: pointer
                         transition: all .3s ease
+            &__cell-info
+                position: absolute
+                top: -.3em
+                right: -.1em
             &__delete-row
                 height: 100%
                 left: calc(100% + .5rem)
